# axum-admin

./: .gitignore  Cargo.toml  README.md  Todo.md
config/: application.yaml  errors.yaml  log4rs.yaml
docs/: menu.http  role.http  user.http
docs/sql/: sys_menu.sql  sys_role.sql  sys_role_menu.sql  sys_user.sql  sys_user_role.sql
src/: error.rs  main.rs
src/config/: db.rs  mod.rs
src/handler/: menu_handler.rs  role_handler.rs  root.rs  user_handler.rs
src/middleware/: auth.rs  context.rs  mod.rs
src/model/: db.rs  menu.rs  mod.rs  role.rs  role_menu.rs  trash.rs  user.rs  user_role.rs
src/service/: login_service.rs  menu_service.rs  mod.rs  role_service.rs  sys_trash_service.rs  user_service.rs
src/utils/: auth.rs  db.rs  error.rs  jwt_util.rs  macros.rs  mod.rs  redis.rs
src/utils/cache/: cache_mem_service.rs  cache_mem_service_copy.rs  cache_redis_service.rs  cache_service.rs  mod.rs
src/vo/: menu_vo.rs  mod.rs  role_vo.rs  user_vo.rs
